# ala-ia-poc-ollama

./: .gitignore  IMPLEMENTATION_PLAN.md  Modelfile  PIXEGAMI_RAG_PLAN.md  README.md  agent_runtime.py  coopnama-rag-test-questions.md  main.py  plan.md  pyproject.toml  ui.py
data/vectorstore/: constitution_index.json
rag/: __init__.py  documents.py  embedding.py  index.py  loader.py  populate_database.py  retriever.py
servers/: restful_api_mcp.py
